Adiciona permanencia dos dados dos pacientes cadastrados